# low_dose_pet_235

./: .gitignore  README.md  compare_metrics.py  global_percentiles.json  global_percentiles_explorer.json  pyproject.toml  test.py  test_explorer.py  test_explorer_old.py  train.py  train_dynunet.py  train_explorer.py  train_explorer_old.py
film_nnformer_quadra/: infer_cond_denoiser.py  train_cond_denoiser.py
film_nnformer_uexplorer/: conditioning.py  infer_cond_denoiser.py  train_cond_denoiser.py
nnFormer/: neural_network.py  nnFormer_seg.py
