[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "low-dose-pet-235"
version = "0.1.0"
description = "Minimal MONAI DynUNet training + inference for low-dose PET"
readme = "low_dose_pet_235/README.md"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.4",
  "SimpleITK>=2.2",
  "monai>=1.3.0",
  "torch>=2.1.0",
  "tqdm>=4.64"
]

[tool.setuptools]
include-package-data = false

