[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "low-dose-pet-235"
version = "0.1.0"
description = "Minimal training + inference for low-dose PET"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.23",
  "matplotlib>=3.4",
  "SimpleITK>=2.2",
  "monai>=1.3.0",
  "torch>=2.1.0",
  "tqdm>=4.64",
  "batchgenerators>=0.25",
  "timm>=0.6.12",
  "zarr>=2.4.0",
]

[tool.setuptools.packages.find]
include = ["low_dose_pet_235*"]
exclude = ["figures*", "nnFormer*"]

[tool.setuptools]
include-package-data = false
